This is MC-1.18.1-SNAPSHOT
Looks like only NMS fixes needed for 1.18.1 MCore - No new Items needing writers.

Changes are almost exclusively cleanup